# mini-java-compiler

./: .gitignore  README.md  compile-antlr.sh  compile.sh
MiniJavaCompiler/: CMakeLists.txt  MiniJavaCompiler.cpp  install.sh
MiniJavaCompiler/helper/dfa/: DFA.cpp  DFA.h  DFAState.cpp  DFAState.h
MiniJavaCompiler/helper/input/: BufferedInput.cpp  BufferedInput.h
MiniJavaCompiler/helper/token/: JavaToken.cpp  JavaToken.h
MiniJavaCompiler/lib/Linux/x64/: libantlr4-runtime.so.4.7.2
MiniJavaCompiler/scanner/: MiniJavaScanner.cpp  MiniJavaScanner.h
MiniJavaCompiler/src/: MiniJavaCompiler.cpp
MiniJavaCompiler/src/codegen/: MiniJavaCodeGen.cpp
MiniJavaCompiler/src/codegen/visitor/: CodeGenVisitor.cpp
MiniJavaCompiler/src/error/: MiniJavaErrorListener.h
MiniJavaCompiler/src/include/ast/node/: ASTAccessIntegerArray.h  ASTAnd.h  ASTArithmetic.h  ASTAssign.h  ASTAssignArray.h  ASTClass.h  ASTComp.h  ASTExpression.h  ASTExpressionArray.h  ASTExpressionList.h  ASTId.h  ASTIf.h  ASTIfElse.h  ASTLength.h  ASTLiteralBoolean.h  ASTLiteralInteger.h  ASTLiteralString.h  ASTMainClass.h  ASTMethod.h  ASTMethodBody.h  ASTMethodCall.h  ASTMethodParams.h  ASTMethodReturn.h  ASTMethodType.h  ASTNegation.h  ASTNegative.h  ASTNewIntegerArray.h  ASTNewObject.h  ASTOr.h  ASTProgram.h  ASTSout.h  ASTStatement.h  ASTStatementList.h  ASTSuper.h  ASTThis.h  ASTVar.h  ASTVarAndAtt.h  ASTVarType.h  ASTWhile.h
MiniJavaCompiler/src/include/ast/visitor/: ASTBaseVisitor.h  ASTVisitor.h
MiniJavaCompiler/src/include/codegen/: MiniJavaCodeGen.h
MiniJavaCompiler/src/include/codegen/visitor/: CodeGenVisitor.h
MiniJavaCompiler/src/include/exception/: MiniJavaCompilerException.h  MiniJavaErrorListener.h
MiniJavaCompiler/src/include/lexer/: MiniJavaLexer.h
MiniJavaCompiler/src/include/parser/: MiniJavaParser.h
MiniJavaCompiler/src/include/parser/listener/: MiniJavaBaseListener.h  MiniJavaListener.h
MiniJavaCompiler/src/include/parser/visitor/: MiniJavaBaseVisitor.h  MiniJavaVisitor.h
MiniJavaCompiler/src/include/semantic/: MiniJavaSemantic.h
MiniJavaCompiler/src/include/semantic/visitor/: CollectInformation.h  DeclarationVisitor.h  ExpressionChecker.h  ExpressionVisitor.h  TransformToAST.h  TransformToASTVisitor.h
MiniJavaCompiler/src/include/structure/code/: AsmCodeGen.hpp  AsmFile.hpp  AsmFileWriter.h  AsmFunction.hpp  CodeStruct.h
MiniJavaCompiler/src/lexer/: MiniJavaLexer.cpp
MiniJavaCompiler/src/parser/: MiniJavaParser.cpp  MiniJavaParser.h
MiniJavaCompiler/src/parser/listener/: MiniJavaBaseListener.cpp  MiniJavaBaseListener.h  MiniJavaListener.cpp  MiniJavaListener.h
MiniJavaCompiler/src/parser/visitor/: MiniJavaBaseVisitor.cpp  MiniJavaBaseVisitor.h  MiniJavaVisitor.cpp  MiniJavaVisitor.h
MiniJavaCompiler/src/scanner/: MiniJavaLexer.cpp  MiniJavaLexer.h
MiniJavaCompiler/src/semantic/: MiniJavaSemantic.cpp
MiniJavaCompiler/src/semantic/visitor/: CollectInformation.cpp  DeclarationVisitor.cpp  ExpressionChecker.cpp  ExpressionVisitor.cpp  TransformToAST.cpp  TransformToASTVisitor.cpp
MiniJavaCompiler/src/structure/code/: AsmFileWriter.cpp
MiniJavaCompiler/src/structure/info/: ProgramInfo.cpp
MiniJavaCompiler/src/structure/program/: ProgramInfo.cpp
MiniJavaCompiler/test/: program.java  test.java  test.txt
Tools/: automaton.txt  simple-tokens.txt  tokens.txt  (+6 more)
(+25 files in other folders)
